spacing issues fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,10 +39,9 @@ body {
   font-weight:500;
 }
 
-.row {
-  padding-bottom: 1rem;
+.blockSpace4 {
+  padding-bottom: 4rem;
 }
-
 
 
 
